# mindgrid-tauri

./: .gitignore  .mindgrid-session.json  .worktree-config.example  AGENTS.md  HELLO.md  PLAN.md  VISION.md
.mindgrid/: session.json
commander/: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  README.md  create-test-cert.sh  history.md  package.json  run_tests.sh  tailwind.config.js  test-subagents.js  vite.config.ts
commander/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
commander/src-tauri/capabilities/: default.json
commander/src-tauri/cli/: commander
commander/src-tauri/icons/: clean-icons.sh  generate-icons.sh  icon.icns
commander/src-tauri/src/: error.rs  lib.rs
commander/src-tauri/src/commands/: chat_history_commands.rs  chat_migration_commands.rs  cli_commands.rs  file_commands.rs  git_commands.rs  llm_commands.rs  menu_commands.rs  mod.rs  project_commands.rs  prompt_commands.rs  session_commands.rs  settings_commands.rs  sub_agent_commands.rs
commander/src-tauri/src/models/: ai_agent.rs  chat_history.rs  file.rs  llm.rs  mod.rs  project.rs  prompt.rs  session.rs  sub_agent.rs
commander/src-tauri/src/services/: agent_cli_settings_service.rs  agent_status_service.rs  chat_history_service.rs  cli_command_builder.rs  cli_output_service.rs  codex_sdk_service.rs  execution_mode_service.rs  file_service.rs  git_service.rs  llm_service.rs  mod.rs  project_service.rs  prompt_service.rs  sub_agent_service.rs
commander/src-tauri/src/tests/: chat_history.rs  error_handling.rs  mod.rs
commander/src-tauri/src/tests/commands/: git_commands.rs  git_diff_merge.rs  git_show_file.rs  git_worktree.rs  mod.rs  project_commands.rs  session_command_args.rs  window_theme.rs
commander/src-tauri/src/tests/integration/: menu_edit_submenu.rs  mod.rs  new_project_persistence.rs  settings_code_auto_collapse.rs  settings_theme.rs  settings_welcome_recent.rs  store_persistence.rs  user_settings_file.rs
commander/src-tauri/src/tests/services/: agent_status_service.rs  app_settings.rs  cli_command_builder.rs  cli_output_service.rs  codex_sdk_service.rs  execution_mode_service.rs  file_service.rs  git_service_enhanced.rs  mod.rs  open_existing.rs  prompt_service.rs  recent_projects.rs  sub_agent_service.rs
mindgrid/: CLAUDE.md  HELLO.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
mindgrid/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev-mode.conf.json  tauri.host.conf.json  tauri.worktree.conf.json
mindgrid/src-tauri/capabilities/: default.json
mindgrid/src-tauri/src/: codex.rs  git.rs  lib.rs  main.rs  pty.rs
prototypes/: README.md  main-app.html  (+2 more)
(+262 files in other folders)
