[package]
name = "commander"
version = "0.1.0"
description = "Command any ai code cli agent"
authors = ["autohand.ai"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "commander_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-dialog = "2"
dirs = "5.0"
filetime = "0.2"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
portable-pty = "0.8"
which = "6"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
async-trait = "0.1"
semver = "1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
assert_cmd = "2.0"
serial_test = "3.0"
test-case = "3.3"
