[package]
name = "mindgrid"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mindgrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY support
portable-pty = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "process"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"


